--- a/src/FlexHtmlHelper.Sample/Views/Web.config
+++ b/src/FlexHtmlHelper.Sample/Views/Web.config
@@ -17,7 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="FlexHtmlHelperSample" />
+        <add namespace="FlexHtmlHelperSample" />        
+        <add namespace="FlexHtmlHelper.Mvc"/>
+        <add namespace="FlexHtmlHelper.Mvc.Html"/>
+        <add namespace="FlexHtmlHelper.Render"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
