--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\FlexHtmlHelper.Mvc\packages.config" />
+  <repository path="..\FlexHtmlHelper.Sample\packages.config" />
   <repository path="..\FlexHtmlHelper\packages.config" />
   <repository path="..\FlexHtmlHelperSample\packages.config" />
 </repositories>
