--- a/src/FlexHtmlHelper.Sample/Views/Web.config
+++ b/src/FlexHtmlHelper.Sample/Views/Web.config
@@ -21,6 +21,7 @@
         <add namespace="FlexHtmlHelper.Mvc"/>
         <add namespace="FlexHtmlHelper.Mvc.Html"/>
         <add namespace="FlexHtmlHelper.Render"/>
+        <add namespace="FlexHtmlHelperSample.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
