--- a/src/FlexHtmlHelper.Mvc/FlexHtmlHelper.Mvc.csproj
+++ b/src/FlexHtmlHelper.Mvc/FlexHtmlHelper.Mvc.csproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;FLEXHTMLHELPER_MVC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -25,7 +25,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;FLEXHTMLHELPER_MVC</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -35,6 +35,7 @@
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Web" />
@@ -104,6 +105,7 @@
     </Compile>
     <Compile Include="FHtmlHelper.cs" />
     <Compile Include="FHtmlHelperOfTModel.cs" />
+    <Compile Include="Html\EnumHelper.cs" />
     <Compile Include="Html\FlexCheckBox.cs" />
     <Compile Include="Html\FlexElement.cs" />
     <Compile Include="Html\FlexForm.cs" />
@@ -114,12 +116,14 @@
     <Compile Include="Html\FlexMvcForm.cs" />
     <Compile Include="Html\FlexPassword.cs" />
     <Compile Include="Html\FlexRadioButton.cs" />
+    <Compile Include="Html\FlexSelect.cs" />
     <Compile Include="Html\FlexTextBox.cs" />
     <Compile Include="Html\FlexValidationMessage.cs" />
     <Compile Include="Html\FlexValidationSummary.cs" />
     <Compile Include="Html\FormExtensions.cs" />
     <Compile Include="Html\InputExtensions.cs" />
     <Compile Include="Html\LabelExtensions.cs" />
+    <Compile Include="Html\SelectExtensions.cs" />
     <Compile Include="Html\ValidationExtensions.cs">
       <SubType>Code</SubType>
     </Compile>
