--- a/src/FlexHtmlHelper.Mvc/FlexHtmlHelper.Mvc.csproj
+++ b/src/FlexHtmlHelper.Mvc/FlexHtmlHelper.Mvc.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Html\InputExtensions.cs" />
     <Compile Include="Html\LabelExtensions.cs" />
     <Compile Include="Html\SelectExtensions.cs" />
+    <Compile Include="Html\TagBuilderExtensions.cs" />
     <Compile Include="Html\TextAreaExtensions.cs" />
     <Compile Include="Html\ValidationExtensions.cs">
       <SubType>Code</SubType>
