--- a/src/.nuget/FlexHtmlHelper.Mvc.nuspec
+++ b/src/.nuget/FlexHtmlHelper.Mvc.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>FlexHtmlHelper.Mvc</id>
-        <version>1.1.0.0</version>
+        <version>1.2.1.0</version>
         <title>FlexHtmlHelper</title>
         <authors>liuhongbo@live.com</authors>
         <owners>liuhongbo@live.com</owners>
@@ -14,8 +14,9 @@
         <dependencies>
             <dependency id="Microsoft.AspNet.Mvc" version="5.0.0" />
         </dependencies>
+	<tags>Html Helper Mvc</tags>
     </metadata>
     <files>
-        <file src="bin\release\FlexHtmlHelper.Mvc.dll" target="lib\net45\FlexHtmlHelper.Mvc.dll" />
+        <file src="..\FlexHtmlHelper.Mvc\bin\release\FlexHtmlHelper.Mvc.dll" target="lib\net45\FlexHtmlHelper.Mvc.dll" />
     </files>
 </package>
