--- a/src/FlexHtmlHelper.Sample/FlexHtmlHelper.Sample.csproj
+++ b/src/FlexHtmlHelper.Sample/FlexHtmlHelper.Sample.csproj
@@ -39,6 +39,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
@@ -125,6 +126,7 @@
     <Compile Include="Controllers\JavaScriptController.cs" />
     <Compile Include="Controllers\LinkController.cs" />
     <Compile Include="Controllers\TagController.cs" />
+    <Compile Include="Controllers\TextController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -211,6 +213,10 @@
     <Content Include="Views\Form\_AjaxEdit.cshtml" />
     <Content Include="Views\JavaScript\Modal.cshtml" />
     <Content Include="Views\JavaScript\_ModalEdit.cshtml" />
+    <Content Include="Views\Text\Alignment.cshtml" />
+    <Content Include="Views\Text\Transformation.cshtml" />
+    <Content Include="Views\Text\ContextualColor.cshtml" />
+    <Content Include="Views\Text\ContextualBackground.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
